Fixed some breakpoints where the webpage layout broke

--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,7 @@ header {
   width: 125px;
 }
 
-@media all and (min-width: 55em) {
+@media all and (min-width: 64em) {
   .dropbtn {
     display: none;
   }
@@ -521,8 +521,8 @@ header {
   }
 
   .container {
-    width: 80%;
-    max-width: 1180px;
+    width: 78%;
+    max-width: 1200px;
     margin: 0 auto;
   }
 
@@ -563,7 +563,7 @@ header {
   padding-top: 120px;
 }
 
-.footer-background {
+.footer-background-mobile {
   position: relative;
   width: 100%;
 }
@@ -595,6 +595,31 @@ header {
     left: 31%;
   }
 }
+@media screen and (min-width: 48em) {
+  .social-list {
+    left: 40%;
+  }
+}
+@media screen and (min-width: 680px) {
+  .social-list {
+    left: 40%;
+  }
+}
+@media screen and (min-width: 520px) {
+  .social-list {
+    left: 35%;
+  }
+}
+@media screen and (min-width: 620px) {
+  .social-list {
+    left: 39%;
+  }
+}
+@media screen and (min-width: 820px) {
+  .social-list {
+    left: 41%;
+  }
+}
 .social-list li {
   display: inline;
   margin: 0 5px;
@@ -624,7 +649,11 @@ header {
   color: black;
 }
 
-@media all and (min-width: 55em) {
+.footer-background-desktop {
+  display: none;
+}
+
+@media all and (min-width: 64em) {
   .footer-grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -686,7 +715,18 @@ header {
     margin: 0;
     margin-left: 12.8em;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1310px) {
+  .footer-company-logo {
+    margin-left: 11em;
+  }
+}
+@media screen and (min-width: 64em) and (max-width: 1140px) {
+  .footer-company-logo {
+    margin-left: 9.5em;
+  }
+}
+@media all and (min-width: 64em) {
   .social-list {
     position: static;
     margin-right: 12.5em;
@@ -694,7 +734,18 @@ header {
   .social-list li a img:hover {
     -webkit-filter: brightness(50%);
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1310px) {
+  .social-list {
+    margin-right: 11em;
+  }
+}
+@media screen and (min-width: 64em) and (max-width: 1140px) {
+  .social-list {
+    margin-right: 9.5em;
+  }
+}
+@media all and (min-width: 64em) {
   .attribution {
     grid-row: -1;
     grid-column: 1/3;
@@ -702,7 +753,8 @@ header {
     font-size: 1rem;
     text-align: left;
   }
-
+}
+@media all and (min-width: 64em) {
   .footer-background-desktop {
     display: inline;
     position: absolute;
@@ -710,7 +762,8 @@ header {
     align-self: flex-start;
     overflow: hidden;
   }
-
+}
+@media all and (min-width: 64em) {
   .footer-background-mobile {
     display: none;
   }
@@ -834,7 +887,7 @@ hr {
   margin: 0 auto;
 }
 
-@media all and (min-width: 55em) {
+@media all and (min-width: 64em) {
   .grid-container {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
@@ -859,14 +912,29 @@ hr {
     font-size: 3.5rem;
     margin: 0;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1230px) {
+  .intro-title {
+    font-size: 3rem;
+    grid-column: 1/6;
+    margin-left: 2em;
+  }
+}
+@media all and (min-width: 64em) {
   .intro-description {
     grid-column: 2/7;
     grid-row: 7;
     text-align: left;
     font-size: 1.15rem;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1230px) {
+  .intro-description {
+    grid-column: 1/6;
+    margin-left: 5.2em;
+  }
+}
+@media all and (min-width: 64em) {
   .view-plans {
     grid-column: 2/4;
     grid-row: 11;
@@ -876,44 +944,58 @@ hr {
     justify-self: center;
     width: 77%;
     border: 2px white solid;
+    justify-self: left;
   }
   .view-plans:hover {
     text-decoration: none;
     color: black;
     background-color: white;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1230px) {
+  .view-plans {
+    grid-column: 1/3;
+    margin-left: 5em;
+  }
+}
+@media all and (min-width: 64em) {
   .intro-image-mobile {
     display: none;
   }
-
+}
+@media all and (min-width: 64em) {
   .intro-image-desktop {
     display: block;
     grid-column: 7/9;
     grid-row: 4;
     z-index: 5;
   }
-
+}
+@media all and (min-width: 64em) {
   .left-image-desktop {
     display: block;
     grid-row: 10;
     justify-self: end;
   }
-
+}
+@media all and (min-width: 64em) {
   .right-image-desktop {
     display: block;
     grid-column: 10;
     z-index: 10;
   }
-
+}
+@media all and (min-width: 64em) {
   .right-image-mobile {
     display: none;
   }
-
+}
+@media all and (min-width: 64em) {
   .left-image-mobile {
     display: none;
   }
-
+}
+@media all and (min-width: 64em) {
   .business-desc {
     display: grid;
     grid-column: 1/-1;
@@ -922,7 +1004,8 @@ hr {
     grid-template-columns: repeat(11, 1fr);
     grid-template-rows: subgrid;
   }
-
+}
+@media all and (min-width: 64em) {
   .horizontal-line {
     grid-column: 2/5;
     color: black;
@@ -930,38 +1013,49 @@ hr {
     margin-left: 1.25em;
     margin-top: 1.5em;
   }
-
+}
+@media all and (min-width: 64em) {
   .main-title {
     grid-column: 1/6;
     font-size: 3.5rem;
     margin-left: 1.1em;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1280px) {
+  .main-title {
+    grid-column: 1/7;
+  }
+}
+@media all and (min-width: 64em) {
   .icons {
     margin: 0;
   }
-
+}
+@media all and (min-width: 64em) {
   .snappy {
     grid-column: 2/5;
     grid-row: 5;
     margin-left: 1em;
     line-height: 1.7;
   }
-
+}
+@media all and (min-width: 64em) {
   .affordable {
     grid-column: 5/8;
     grid-row: 5;
     margin-right: 1em;
     line-height: 1.7;
   }
-
+}
+@media all and (min-width: 64em) {
   .people {
     grid-column: 8/11;
     grid-row: 5;
     margin-right: 2em;
     line-height: 1.7;
   }
-
+}
+@media all and (min-width: 64em) {
   .snappy-text,
 .affordable-text,
 .people-text,
@@ -971,11 +1065,13 @@ hr {
     text-align: left;
     font-size: 1rem;
   }
-
+}
+@media all and (min-width: 64em) {
   .line-break-mobile {
     display: none;
   }
-
+}
+@media all and (min-width: 64em) {
   .how-we-work {
     display: grid;
     grid-column: 1/10;
@@ -985,7 +1081,8 @@ hr {
     line-height: 1.1;
     background-color: #2a223d;
   }
-
+}
+@media all and (min-width: 64em) {
   .how-we-work-text {
     grid-column: 1/3;
     text-align: left;
@@ -993,7 +1090,13 @@ hr {
     padding-top: 0.8em;
     font-size: 3rem;
   }
-
+}
+@media screen and (min-width: 64em) and (max-width: 1168px) {
+  .how-we-work-text {
+    font-size: 2.44rem;
+  }
+}
+@media all and (min-width: 64em) {
   .work-link {
     grid-column: 3;
     grid-row: 1;
@@ -1009,13 +1112,15 @@ hr {
     background-color: white;
     text-decoration: none;
   }
-
+}
+@media all and (min-width: 64em) {
   .how-we-work-background-desktop {
     display: inline;
     grid-column: 3;
     grid-row: 1;
   }
-
+}
+@media all and (min-width: 64em) {
   .how-we-work-background-mobile {
     display: none;
   }
