--- a/sass-boilerplate/stylesheets/abstracts/_variables.scss
+++ b/sass-boilerplate/stylesheets/abstracts/_variables.scss
@@ -69,7 +69,7 @@ $iphone678-plus: 414px !default;
 $tablet: 48em !default;
 /// Container's maximum width
 /// @type Length
-$desktop: 55em !default;
+$desktop: 64em !default;
 
 
 
