--- a/sass-boilerplate/stylesheets/layout/_header_desktop.scss
+++ b/sass-boilerplate/stylesheets/layout/_header_desktop.scss
@@ -28,8 +28,8 @@
 }
 
 .container {
-    width: 80%;
-    max-width: 1180px;
+    width: 78%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
